--- a/ci.yml
+++ b/ci.yml
@@ -38,6 +38,19 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+
+      - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/demo-app:latest
   publish: 
 
       needs: build
