--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -24,7 +24,9 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
 
     - name: Build with Gradle Wrapper
-      run: ./gradlew build
+      run: |
+        cd ci-cd-project
+        ./gradlew build
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -37,6 +39,5 @@ jobs:
       with:
         context: ./ci-cd-project
         file: ./ci-cd-project/Dockerfile
-
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/demo-app:latest
