--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -24,20 +24,18 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
 
     - name: Build with Gradle Wrapper
-      run: |
-        cd ci-cd-project
-        ./gradlew build
-
+      run: ./gradlew build
+    
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-
+    
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
       with:
-        context: ./ci-cd-project
-        file: ./ci-cd-project/Dockerfile
+        context: .
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/demo-app:latest
